--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,6 +1,4 @@
-.md-typeset .card {
-  background-color: var(--md-code-bg-color);
-  border-radius: 8px;
-  padding: 1rem;
-  min-height: 100px;
+.md-typeset .card:hover {
+  box-shadow: none !important;
+  transform: none !important;
 }
