--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,3 +1,4 @@
-.md-typeset .grid-single {
+.md-typeset .grid.grid-single {
+  display: grid !important;
   grid-template-columns: 1fr !important;
 }
