--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -11,7 +11,7 @@ section[style*="display: flex"] {
 
 /* Card con testo verticale a sinistra */
 .vertical-card .card {
-  writing-mode: vertical-rl;
+  writing-mode: vertical-lr;
   text-orientation: sideways;
   transform-origin: top left;
   /* Regola dimensioni se necessario */
